--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
+<!DOCTYPE>
+<html>
+        <head>
+                <title>Follow Up Pop Up</title>
+                <link rel="stylesheet" type="text/css" href="main.css" />
+        </head>
+        <body>
 <div class="popUpBg">
         <div class="popUpBody">
             <p>:)</p>
         </div>
     </div>
+</body>
+</html>
